# UniIR-for-Pyserini

./: README.md  pyproject.toml  requirements.txt
src/common/: mbeir_embedder.py
src/models/uniir_blip/backbone/: med.py
src/pyserini_integration/: mbeir_datasets.py  uniir_base_encoder.py  uniir_corpus_encoder.py  uniir_query_encoder.py
src/uniir_for_pyserini/: uniir_base_encoder.py  uniir_corpus_encoder.py  uniir_query_encoder.py
