[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "uniir_for_pyserini"
version = "0.1.0"
authors = [
     { name = "Cong Wei", email = "lim142857@gmail.com" },
     { name = "Wenhu Chen", email = "wenhuchen@uwaterloo.ca" },
     { name = "Sahel Sharifymoghaddam", email = "sahel.sharifymoghaddam@uwaterloo.ca" },
     { name = "Zibo Guo", email = "daniel168.guo@gmail.com" }
]
description = "Fork of the original UniIR repository modified for easy and simple Pyserini integration"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
"Homepage" = "https://github.com/castorini/UniIR-for-Pyserini"
"Bug Tracker" = "https://github.com/castorini/UniIR-for-Pyserini/issues"

[tool.bumpver]
current_version = "0.1.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "Bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"', 'version = "{version}"'
]
"README.md" = [
    'current_version = "{version}"',
]

[tool.setuptools.packages.find]
where = ["src"]
include = [
     "uniir_for_pyserini",
     "common",
     "data",
     "models"
]

[tool.setuptools.package-data]
"uniir_for_pyserini" = ["model_config.yaml"]
"models" = ["**/*.json"]
